--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,13 @@ config.log
 config.status
 configure.msg
 make.sys  
+make.inc
 
 .DS_Store
 S3DE/iotk/iotk
+
+include/c_defs.h
+include/fft_defs.h
+install/make_blas.inc
+install/make_lapack.inc
+
